[package]
name = "stellarlib"
version = "0.1.0"
edition = "2021"

[dependencies]
stellar-strkey = "0.0.13"
ethnum = { version = "1.5.0" }
escape-bytes = { version = "0.1.1", default-features = false, features = [
    "alloc",
] }
serde = { version = "1.0.225", default-features = false, features = ["alloc"] }
serde_json = { version = "1.0.145", default-features = false, features = [
    "alloc",
] }
chrono = { version = "0.4", default-features = false, features = ["alloc"] }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }

[dev-dependencies]
csv = "1.3"
base64 = "0.22"
